# obsidian-noter

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: project-automation.yml
docs/: architecture.md  development.md  installation-md.md  installation.md  requirements.md  usage-md.md  usage.md
docs/api/: chat-summarizer-md.md  chat_summarizer.md  summarizer.md
obsidian_noter/: server.py
